--- a/.github/workflows/nodejs-matrix.yml
+++ b/.github/workflows/nodejs-matrix.yml
@@ -15,5 +15,5 @@ jobs:
       with:
         node-version: ${{ matrix.version }}
     - run: npm install
-    - name: Running on Platform = ${{ matrix.platform }} Node = ${{ matrix.version }}
-      run: npm test
+    #- name: Running on Platform = ${{ matrix.platform }} Node = ${{ matrix.version }}
+    #  run: npm test
